--- a/templates/default/ambari-agent.ini.erb
+++ b/templates/default/ambari-agent.ini.erb
@@ -25,6 +25,7 @@ data_cleanup_interval=86400
 data_cleanup_max_age=2592000
 ping_port=8670
 cache_dir=/var/lib/ambari-agent/cache
+tolerate_download_failures=true
 
 [puppet]
 puppetmodules=/var/lib/ambari-agent/puppet
