--- a/templates/default/ambari-agent.ini.erb
+++ b/templates/default/ambari-agent.ini.erb
@@ -24,20 +24,10 @@ tmp_dir=/var/lib/ambari-agent/data/tmp
 loglevel=INFO
 data_cleanup_interval=86400
 data_cleanup_max_age=2592000
+data_cleanup_max_size_MB = 100
 ping_port=8670
 cache_dir=/var/lib/ambari-agent/cache
 tolerate_download_failures=true
-
-[puppet]
-puppetmodules=/var/lib/ambari-agent/puppet
-ruby_home=/usr/lib/ambari-agent/lib/ruby-1.8.7-p370
-puppet_home=/usr/lib/ambari-agent/lib/puppet-2.7.9
-facter_home=/usr/lib/ambari-agent/lib/facter-1.6.10
-# How many seconds will pass before running puppet is terminated on timeout
-timeout_seconds = 600
-
-[python]
-custom_actions_dir = /var/lib/ambari-agent/resources
 
 [command]
 maxretries=2
@@ -58,5 +48,5 @@ dirs=/etc/hadoop,/etc/hadoop/conf,/etc/hbase,/etc/hcatalog,/etc/hive,/etc/oozie,
   /var/run/hadoop,/var/run/zookeeper,/var/run/hbase,/var/run/templeton,/var/run/oozie,
   /var/log/hadoop,/var/log/zookeeper,/var/log/hbase,/var/run/templeton,/var/log/hive,
   /var/log/nagios
-rpms=nagios,ganglia,
-  hadoop,hadoop-lzo,hbase,oozie,sqoop,pig,zookeeper,hive,libconfuse,ambari-log4j
+; 0 - unlimited
+log_lines_count=300
