--- a/templates/default/ambari-agent.ini.erb
+++ b/templates/default/ambari-agent.ini.erb
@@ -30,6 +30,10 @@ run_as_user = root
 parallel_execution = 0
 alert_grace_period = 5
 tmp_dir = /var/lib/ambari-agent/data/tmp
+logdir = /var/log/ambari-agent
+piddir = /var/run/ambari-agent
+alert_kinit_timeout = 14400000
+system_resource_overrides = /etc/resource_overrides
 
 [security]
 keysdir = /var/lib/ambari-agent/keys
@@ -41,11 +45,14 @@ pidlookuppath = /var/run/
 
 [heartbeat]
 state_interval = 6
+state_interval_seconds = 60
 dirs = /etc/hadoop,/etc/hadoop/conf,/etc/hbase,/etc/hcatalog,/etc/hive,/etc/oozie,
         /etc/sqoop,/etc/ganglia,
         /var/run/hadoop,/var/run/zookeeper,/var/run/hbase,/var/run/templeton,/var/run/oozie,
         /var/log/hadoop,/var/log/zookeeper,/var/log/hbase,/var/run/templeton,/var/log/hive
 log_lines_count = 300
+idle_interval_min = 1
+idle_interval_max = 10
 
 [logging]
 syslog_enabled = 0
