set log directory and PID directory AMBARI-18525

--- a/templates/default/ambari-agent.ini.erb
+++ b/templates/default/ambari-agent.ini.erb
@@ -30,6 +30,8 @@ run_as_user = root
 parallel_execution = 0
 alert_grace_period = 5
 tmp_dir = /var/lib/ambari-agent/data/tmp
+logdir=/var/log/ambari-agent
+piddir=/var/run/ambari-agent
 
 [security]
 keysdir = /var/lib/ambari-agent/keys
